src/objects/Patient__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Facilities__c</fullName>
        <inlineHelpText>Select the additional facilities availed by the Patient</inlineHelpText>
        <label>Additional Facilities</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value><fullName>Clothes</fullName><default>false</default><label>Clothes</label></value>
                <value><fullName>Syringe</fullName><default>false</default><label>Syringe</label></value>
                <value><fullName>Thermometer</fullName><default>false</default><label>Thermometer</label></value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Addmision_Date_Time__c</fullName>
        <description>Date and time of Addmission</description>
        <inlineHelpText>&quot;Enter the Date of time of Addmission if available</inlineHelpText>
        <label>Addmision Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Current_Bill_Amount__c</fullName>
        <label>Current Bill Amount</label>
        <precision>4</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discharge_Date_Time__c</fullName>
        <description>Date and time of discharge</description>
        <inlineHelpText>&quot;Enter the Date of time of discharge if available</inlineHelpText>
        <label>Discharge Date Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <inlineHelpText>Enter the total discount availed in percentage</inlineHelpText>
        <label>Discount</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Doctor_s_Notes__c</fullName>
        <label>Doctor&apos;s Notes</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value><fullName>Female</fullName><default>false</default><label>Female</label></value>
                <value><fullName>Male</fullName><default>false</default><label>Male</label></value>
                <value><fullName>Others</fullName><default>false</default><label>Others</label></value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hospital__c</fullName>
        <inlineHelpText>Enter the location of the hospital where the patient is receiving treatment</inlineHelpText>
        <label>Hospital</label>
        <required>true</required>
        <scale>0</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Patient_Invoice_Number__c</fullName>
        <inlineHelpText>Enter the invoice number of the patient</inlineHelpText>
        <label>Patient Invoice Number</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Patient_Treatment_History__c</fullName>
        <inlineHelpText>Details of patients treatment history</inlineHelpText>
        <label>Patient Treatment History</label>
        <length>25000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Relation__c</fullName>
        <inlineHelpText>Enter the relation between the attendee and the patient</inlineHelpText>
        <label>Relation</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relative_s_Email__c</fullName>
        <description>Relative&apos;s Email</description>
        <label>Relative&apos;s Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Relative_s_Mobile_Number__c</fullName>
        <label>Relative&apos;s Mobile Number</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Relative_s_Name__c</fullName>
        <description>Relative&apos;s Name</description>
        <inlineHelpText>Enter the name of the relative attending the patient</inlineHelpText>
        <label>Relative&apos;s Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Patient</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Patient Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Patients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>